--- a/index.org
+++ b/index.org
@@ -1,3 +1,51 @@
+* 2016-11-28 Emacs News
+  :PROPERTIES:
+  :ID:       o2b:9b93708f-c678-474d-bbc1-842a72f318e5
+  :POST_DATE: [2016-11-28 Mon 13:24]
+  :POSTID:   28830
+  :BLOG:     sacha
+  :END:
+
+- Org Mode:
+  - [[https://github.com/vkazanov/toy-orgfuse][Mount org-mode files as FUSE file systems]] ([[https://www.reddit.com/r/emacs/comments/5emvh7/mount_orgmode_files_as_fuse_file_systems/][/r/emacs]], [[https://www.reddit.com/r/orgmode/comments/5emuzc/mount_orgmode_files_as_fuse_file_systems/][/r/orgmode]])
+  - [[https://www.reddit.com/r/emacs/comments/5e71oz/presentations_in_emacs/][Presentations in Emacs]]
+- Configuration:
+  - [[https://github.com/tarsius/no-littering][GitHub - tarsius/no-littering: Help keeping ~/.emacs.d clean]] ([[https://www.reddit.com/r/emacs/comments/5f66ak/github_tarsiusnolittering_help_keeping_emacsd/][Reddit]])
+  - [[http://emacs-bootstrap.com/][Emacs-Bootstrap: Your on-the-fly Emacs development environment!]] ([[https://www.reddit.com/r/emacs/comments/5ewt5x/emacsbootstrap_your_onthefly_emacs_development/][Reddit]])
+  - [[https://www.reddit.com/r/emacs/comments/5ej8by/asynchronous_tangle_and_compile_of_configorg/][Asynchronous tangle and compile of config.org (question/issue)]]
+  - [[https://github.com/argentum47/everm][Emacs version manager]]
+- Emacs Lisp:
+  - [[http://pragmaticemacs.com/emacs/cancel-all-timers-calling-some-function/][Cancel all timers calling some function]]
+  - [[https://github.com/cask/cask/issues/376][Emacs’s cask (a.k.a. bundler for Emacs) is looking for new maintainers]] ([[https://www.reddit.com/r/emacs/comments/5e41dr/emacss_cask_aka_bundler_for_emacs_is_looking_for/][Reddit]])
+- Coding:
+  - [[https://www.reddit.com/r/emacs/comments/5ei7wa/awesome_vimlike_folding_for_evilmode_with_markers/][Awesome vim-like folding for Evil-mode with {{{ markers]]
+  - [[https://www.reddit.com/r/emacs/comments/5e94pg/have_links_in_comments_like_spacemacs/][Have links in comments like Spacemacs - goto-address-mode]]
+  - [[https://www.topbug.net/blog/2016/09/29/emacs-disable-certain-pairs-for-electric-pair-mode/][Disable Certain Pairs for electric-pair-mode - Top Bug Net]] 
+  - [[https://www.youtube.com/watch?v=pKzIxtR0ElU][Productive Emacs: clojure refactor (cljr-refactor)]] (16:42)
+- Emacs development:
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=d9dd884c7c1940cacfcc2d86d47220b40c520bb5][New variable while-no-input-ignore-events]]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=8da61f884649e1fb98fc83f9401116df8f948a31][New input method polish-prefix]]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=afe2997119a5e6b108851f2e236037da1d4acef2][New option comint-move-point-for-matching-input]]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=27b754cb4432ece3efe3fc9d8e52a869ae061b7f][New command for unmarking all buffers in buffer menu]]
+  - [[http://lists.gnu.org/archive/html/emacs-devel/2016-11/msg00551.html][Discussion about conservative garbage collection]]
+  - [[http://lists.gnu.org/archive/html/emacs-devel/2016-11/msg00456.html][Work on replacement for ldefs-boot.el, which builds Emacs from temacs to bootstrap]]
+  - [[http://lists.gnu.org/archive/html/emacs-devel/2016-11/msg00549.html][Volunteers welcome to work on Wayland support]]
+  - [[http://lists.gnu.org/archive/html/emacs-devel/2016-11/msg00475.html][Follow up on overlays as AA-tree]]
+- Other:
+  - [[http://www.lunaryorn.com/posts/bye-bye-emojis-emacs-hates-macos.html][Bye Bye Emojis: Emacs Hates MacOS]] ([[https://www.reddit.com/r/emacs/comments/5e3xpu/emojis_in_emacs_intentionally_disabled_for_osx/][Reddit]], [[https://news.ycombinator.com/item?id=13011185][Hacker News]])
+  - [[http://irreal.org/blog/?p=5749][Mastering Emacs is 50% Off]]
+  - [[https://www.reddit.com/r/emacs/comments/5eyxhn/an_idea_emacs_rpg_mode/][An idea - Emacs RPG mode]]
+- New packages:
+  - [[package:counsel-gtags][counsel-gtags]]: ivy for GNU global
+  - [[package:evil-replace-with-register][evil-replace-with-register]]: Port of vim plugin replace-with-register
+  - [[package:flycheck-plantuml][flycheck-plantuml]]: Integrate plantuml with flycheck
+  - [[package:grab-x-link][grab-x-link]]: Grab links from X11 apps and insert into Emacs
+
+Links from [[http://reddit.com/r/emacs/new][reddit.com/r/emacs]], [[http://reddit.com/r/orgmode][/r/orgmode]], [[http://reddit.com/r/spacemacs][/r/spacemacs]], [[https://hn.algolia.com/?query=emacs&sort=byDate&prefix&page=0&dateRange=all&type=story][Hacker News]], [[http://planet.emacsen.org][planet.emacsen.org]], [[https://www.youtube.com/results?search_query=emacs&search_sort=video_date_uploaded][Youtube]], the changes to the [[http://git.savannah.gnu.org/cgit/emacs.git/log/etc/NEWS][Emacs NEWS file]], and [[http://lists.gnu.org/archive/html/emacs-devel/2016-11][emacs-devel]].
+
+[[http://sachachua.com/blog/category/emacs-news][Past Emacs News round-ups]]
+
+
 * 2016-11-21 Emacs News
   :PROPERTIES:
   :ID:       o2b:f4f88ad2-9ec1-4514-96b9-63c636f4c6b0
