--- a/index.org
+++ b/index.org
@@ -1,3 +1,118 @@
+* 2017-01-23 Emacs News
+  :PROPERTIES:
+  :ID:       o2b:6710839b-f4ee-49dc-b34f-fd2c2b247ec7
+  :POST_DATE: [2017-01-24 Tue 07:22]
+  :POSTID:   28901
+  :BLOG:     sacha
+  :END:
+
+- Org Mode:
+  - [[http://pragmaticemacs.com/emacs/a-shortcut-to-my-favourite-org-mode-agenda-view/][A shortcut to my favourite org-mode agenda view]]
+  - [[http://mbork.pl/2017-01-22_Current_headline_or_path_in_Org-mode][Current headline or path in Org-mode]]
+  - [[https://github.com/schmendrik/OrgClockTray][OrgClockTray: Display your org-mode clock time in a tray icon in Windows' Taskbar]]
+  - [[http://kitchingroup.cheme.cmu.edu/blog/2017/01/21/Exporting-org-mode-to-Jupyter-notebooks/][Exporting org-mode to Jupyter notebooks]]
+  - [[https://www.reddit.com/r/orgmode/comments/5p3g3t/archive_articles_from_various_sources_to_org_file/][Archive articles from various sources to org file via IFTTT and Dropbox]]
+  - [[https://www.reddit.com/r/emacs/comments/5p7wha/org_capture_reminders_google/][org capture / reminders / ... Google.]]
+  - [[https://www.reddit.com/r/orgmode/comments/5odzem/accept_calendar_invitation_icalics_in_mail/][accept calendar invitation (ical/ics) in mail (x-post from /r/orgmode)]]
+  - [[https://www.reddit.com/r/emacs/comments/5oyml2/any_todoist_user_interested_in_collaborating_on/][Any Todoist user interested in collaborating on "org-todoist"?]]
+  - [[https://www.reddit.com/r/emacs/comments/5oimrs/managing_dotfiles_with_org_mode/][Managing dotfiles with org mode?]]
+- Coding:
+  - [[http://fasciism.com/2017/01/24/x509-mode/][X509 Mode]] - for viewing SSL certificates
+  - [[http://fasciism.com/2017/01/20/cycling-home/][Cycling Home]] - beginning of line or indentation
+  - [[https://www.youtube.com/watch?v=J5jxMRlXvDw][Run Scheme on Emacs - Ubuntu]] (4:22)
+- Emacs Lisp:
+  - [[https://www.reddit.com/r/emacs/comments/5p4oia/free_emacs_lisp_learning_resources/][Free Emacs Lisp learning Resources]]
+  - [[https://www.reddit.com/r/emacs/comments/5p475u/is_there_a_way_to_invoke_a_command_only_when_the/][Is there a way to invoke a command only when the *first* time a package is being loaded?]]
+  - [[https://www.reddit.com/r/emacs/comments/5orbsy/how_to_read_a_password_from_gnu_pass/][How to read a password from GNU pass?]]
+- Emacs development:
+  - [[http://puntoblogspot.blogspot.com/2017/01/git-contribution-spans-emacs-case-study.html][git contribution spans (emacs case study)]]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=ad29e145b16cf2966e3a9df884cbc234f1ae3e51][New function region-bounds]]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=07d15164271270d09464863d7ec2bfce62d65085][New frame parameter inhibit-double-buffering]]
+  - [[http://lists.gnu.org/archive/html/emacs-devel/2017-01/msg00483.html][Discussion of behaviour of desktop-read and -nw]]
+  - [[http://lists.gnu.org/archive/html/emacs-devel/2017-01/msg00481.html][Progress on with-url]]
+  - [[http://lists.gnu.org/archive/html/emacs-devel/2017-01/msg00324.html][Continued discussion of strategy for CEDET merge]]
+- Proxies:
+  - [[https://www.youtube.com/watch?v=UlgO5VFXg9c][How to Install Emacs in Ubuntu Using Proxy]] (3:32)
+  - [[https://github.com/ninrod/emacs-antiproxy][ninrod/emacs-antiproxy: an anti proxy setup using git repo mirrors of package archives]] ([[https://www.reddit.com/r/emacs/comments/5op4wy/ninrodemacsantiproxy_an_anti_proxy_setup_using/][Reddit]])
+  - [[https://www.reddit.com/r/emacs/comments/5omdia/at_work_trying_to_install_packages_in_emacs_cant/][At work trying to install packages in Emacs cant connect to server]] - proxy, user agent
+- Other:
+  - [[https://www.reddit.com/r/emacs/comments/5p7pwd/why_do_you_like_emacs/][Why do you like Emacs?]]
+  - [[https://www.youtube.com/watch?v=JdF1QZQqiTI][Emacs Tutorial for Beginners - Simply Explained]] (7:36)
+  - [[http://puntoblogspot.blogspot.com/2017/01/autocomplete-erc-nicks-with-sign-for.html][Autocomplete erc nicks with @ sign (for slack)]]
+  - [[https://github.com/hsjunnesson/wolfram.el][WolframAlpha integration with Emacs]] ([[https://www.reddit.com/r/emacs/comments/5oo51r/wolframalpha_integration_with_emacs/][Reddit]])
+  - [[https://www.reddit.com/r/emacs/comments/5oakde/cliphist_v050_read_from_clipboard_managers/][cliphist v0.5.0 (read from clipboard managers)]]
+  - [[https://github.com/syl20bnr/spacemacs/commit/273e1e94d63ab7674d0481cec9ac2516874c62d2][Spacemacs is getting its own ELPA]] ([[https://www.reddit.com/r/spacemacs/comments/5ogqa2/spacemacs_is_getting_its_own_elpa/][Reddit]])
+  - [[https://www.wisdomandwonder.com/article/10504/a-hydra-for-country-business-marks][A Hydra For Country Business Marks]]
+  - [[http://fasciism.com/2017/01/23/i-am-your-everywhere/][I am your everywhere]] - server-mode
+  - [[http://fasciism.com/2017/01/21/waiting-for-tonight/][Waiting For Tonight]] - midnight-mode
+- Related projects:
+  - [[http://wilfred.me.uk/blog/2017/01/19/this-week-in-remacs/][This Week in Remacs]] ([[https://www.reddit.com/r/emacs/comments/5p1hz4/this_week_in_remacs/][Reddit]]) - Emacs port to Rust
+  - [[http://lisperator.net/slip/idedoc][Ymacs, an Emacs-like editor for the web, with a lisp REPL]] ([[https://www.reddit.com/r/emacs/comments/5oibl6/ymacs_an_emacslike_editor_for_the_web_with_a_lisp/][Reddit]])
+- New packages:
+  - [[package:bshell][bshell]]: manage and track multiple inferior shells
+  - [[package:el-patch][el-patch]]: Future-proof your Emacs Lisp customizations!
+  - [[package:eldoc-overlay-mode][eldoc-overlay-mode]]: Display eldoc with contextual documentation overlay.
+  - [[package:flycheck-kotlin][flycheck-kotlin]]: Support kotlin in flycheck
+  - [[package:github-pullrequest][github-pullrequest]]: Create and fetch Github Pull requests with ease
+  - [[package:mbsync][mbsync]]: run mbsync to fetch mails
+  - [[package:morganey-mode][morganey-mode]]: Major mode for editing Morganey files
+  - [[package:promise][promise]]: This is a simple implementation of Promises/A+.
+
+Links from [[http://reddit.com/r/emacs/new][reddit.com/r/emacs]], [[http://reddit.com/r/orgmode][/r/orgmode]], [[http://reddit.com/r/spacemacs][/r/spacemacs]], [[https://hn.algolia.com/?query=emacs&sort=byDate&prefix&page=0&dateRange=all&type=story][Hacker News]], [[http://planet.emacsen.org][planet.emacsen.org]], [[https://www.youtube.com/results?search_query=emacs&search_sort=video_date_uploaded][Youtube]], the changes to the [[http://git.savannah.gnu.org/cgit/emacs.git/log/etc/NEWS][Emacs NEWS file]], and [[http://lists.gnu.org/archive/html/emacs-devel/2017-01][emacs-devel]].
+
+[[http://sachachua.com/blog/category/emacs-news][Past Emacs News round-ups]]
+
+* 2017-01-16 Emacs News
+  :PROPERTIES:
+  :ID:       o2b:090a71b7-66ff-424e-9063-8f433652d759
+  :POST_DATE: [2017-01-16 Mon 01:09]
+  :POSTID:   28893
+  :BLOG:     sacha
+  :END:
+
+- Org Mode:
+  - [[http://karl-voit.at/2017/01/15/org-clone-subtree-with-time-shift/][Recurring Events with Org-mode]] - hat tip to [[http://irreal.org/blog/?p=5869][Irreal]] for the link
+  - [[http://kinjo.github.io/org-html5presentation.el][org-html5presentation.el]] ([[https://www.reddit.com/r/emacs/comments/5nm3dt/orghtml5presentationel/][Reddit]])
+  - [[https://www.reddit.com/r/emacs/comments/5nkthp/orgmode_scheduling_a_task_for_the_nth_weekday/][org-mode: scheduling a task for the nth weekday each month?]]
+  - [[https://www.reddit.com/r/emacs/comments/5nah2v/experiences_building_midtolarge_programs_in/][Experiences building mid-to-large programs in org-mode?]]
+- Coding:
+  - [[http://kitchingroup.cheme.cmu.edu/blog/2017/01/15/Querying-a-MongoDB-bibtex-database-with-Python-and-emacs-lisp/][Querying a MongoDB bibtex database with Python and emacs-lisp]]
+  - [[https://www.reddit.com/r/emacs/comments/5o4ytn/my_first_emacs_theme_eziam_a_mix_of_tao_and_leuven/][My first Emacs theme: Eziam, a mix of Tao and Leuven.]]
+  - [[https://www.reddit.com/r/emacs/comments/5nxhnd/gdbmi_or_realgud/][gdb-mi or realgud?]]
+  - [[https://github.com/millejoh/emacs-ipython-notebook/][millejoh/emacs-ipython-notebook: Jupyter and IPython 2.x/3.x notebook client in Emacs]]
+  - [[https://www.reddit.com/r/emacs/comments/5nkbuu/mode_for_assembly_language/][Mode for Assembly language]]
+  - [[https://github.com/jakoblind/github-pullrequest][New package for creating and fetching Github pull requests]] ([[https://www.reddit.com/r/emacs/comments/5o34ht/new_package_for_creating_and_fetching_github_pull/][Reddit]])
+- Emacs development:
+  - [[https://www.reddit.com/r/emacs/comments/5nz2kv/how_big_of_a_deal_is_the_upcoming_concurrency/][How big of a deal is the upcoming concurrency support?]]
+  - [[http://www.wilfred.me.uk/blog/2017/01/11/announcing-remacs-porting-emacs-to-rust/][Announcing Remacs: Porting Emacs to Rust]] ([[https://www.reddit.com/r/emacs/comments/5nf8d0/announcing_remacs_porting_emacs_to_rust/][Reddit]], [[https://news.ycombinator.com/item?id=13378247][Hacker News]])
+  - [[https://www.reddit.com/r/emacs/comments/5n3y0n/idiomatic_native_module_api/][Idiomatic native module API]]
+  - [[https://www.reddit.com/r/emacs/comments/5n2vji/why_does_emacs_syntax_highlighting_not_color_the/][Why does emacs syntax highlighting not color the car of an s-expressoin differently than the cdr?]]
+  - [[http://lists.gnu.org/archive/html/emacs-devel/2017-01/msg00189.html][Discussion about anaphoric macros]]
+- Other:
+  - [[http://mbork.pl/2017-01-14_I'm_now_using_the_right_dictionary][I'm now using the right dictionary -]] Stardict and sdcv-mode
+  - [[http://irreal.org/blog/?p=5867][A Reminder about Emacs Keybindings on MacOS]]
+  - [[https://www.miskatonic.org/2017/01/09/recent-emacs-changes/][William Denton's config changes for Org, Projectile, Ivy, Swiper, Counsel, and Zotero]] 
+  - [[https://www.reddit.com/r/emacs/comments/5nztc3/what_would_you_suggest_for_an_emacs_starter/][What would you suggest for an emacs starter? Visual, keystrokes, optional etc. A bit long.]]
+  - [[https://www.reddit.com/r/emacs/comments/5nqyxo/why_gnus/][Why Gnus?]]
+  - [[http://emacsist.com/10128][Introducing ivy-mode]]
+  - [[https://vijiboy.wordpress.com/2017/01/11/migrating-to-emacs-carrying-my-4-years-of-vim-with-me/][Migrating to Emacs, carrying my 4 years of Vim with me ! | Tech n Tips]]
+- New packages:
+  - [[package:buffer-manage][buffer-manage]]: manage buffers
+  - [[package:i3wm][i3wm]]: i3wm integration library
+  - [[package:ivy-youtube][ivy-youtube]]: Query YouTube and play videos in your browser
+  - [[package:org-mime][org-mime]]: org html export for text/html MIME emails
+  - [[package:passmm][passmm]]: A minor mode for pass (Password Store).
+  - [[package:rg][rg]]: Use ripgrep (grep and ag replacement) like rgrep.
+  - [[package:stem-english][stem-english]]: - routines for stemming English word
+  - [[package:ydk-mode][ydk-mode]]: Language support for Yu-Gi-Oh! deck files
+  - [[package:zweilight-theme][zweilight-theme]]: A dark color theme for Emacs.
+  - [[package:cobol-mode][cobol-mode]]: Mode for editing COBOL code
+
+Links from [[http://reddit.com/r/emacs/new][reddit.com/r/emacs]], [[http://reddit.com/r/orgmode][/r/orgmode]], [[http://reddit.com/r/spacemacs][/r/spacemacs]], [[https://hn.algolia.com/?query=emacs&sort=byDate&prefix&page=0&dateRange=all&type=story][Hacker News]], [[http://planet.emacsen.org][planet.emacsen.org]], [[https://www.youtube.com/results?search_query=emacs&search_sort=video_date_uploaded][Youtube]], the changes to the [[http://git.savannah.gnu.org/cgit/emacs.git/log/etc/NEWS][Emacs NEWS file]], and [[http://lists.gnu.org/archive/html/emacs-devel/2017-01][emacs-devel]].
+
+[[http://sachachua.com/blog/category/emacs-news][Past Emacs News round-ups]]
+
+
 * 2017-01-09 Emacs News
   :PROPERTIES:
   :ID:       o2b:6efba43a-21f1-4a68-8d2a-390d93012db3
